--- a/IMDeveloper/AndroidManifest.xml
+++ b/IMDeveloper/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.imsdk.imdeveloper"
-    android:versionCode="133"
-    android:versionName="1.3.3" >
+    android:versionCode="136"
+    android:versionName="1.3.6" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -115,6 +115,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
         <activity
+            android:name="com.imsdk.imdeveloper.ui.activity.ModifyPasswordActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
+        <activity
             android:name="com.imsdk.imdeveloper.ui.activity.SignActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
@@ -126,6 +130,12 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.imsdk.imdeveloper.ui.activity.MyGroupsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.imsdk.imdeveloper.ui.activity.GroupInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.imsdk.imdeveloper.ui.activity.GroupSearchMemberActivity"
             android:screenOrientation="portrait" />
     </application>
 
