--- a/IMDeveloper/.project
+++ b/IMDeveloper/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>IMDeveloper</name>
+	<name>IMDeveloper_github</name>
 	<comment></comment>
 	<projects>
 	</projects>
