--- a/IMDeveloper/bin/AndroidManifest.xml
+++ b/IMDeveloper/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.imsdk.imdeveloper"
-    android:versionCode="18"
-    android:versionName="1.2.8" >
+    android:versionCode="136"
+    android:versionName="1.3.6" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -57,6 +57,20 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <activity
+            android:name="imsdk.activity.CSChatActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="imsdk" />
+            </intent-filter>
+        </activity>
+        
         <activity
             android:name="com.imsdk.imdeveloper.ui.activity.MainActivity"
             android:logo="@drawable/logo"
@@ -101,6 +115,10 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
         <activity
+            android:name="com.imsdk.imdeveloper.ui.activity.ModifyPasswordActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
+        <activity
             android:name="com.imsdk.imdeveloper.ui.activity.SignActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateAlwaysHidden" />
@@ -112,6 +130,12 @@
             android:screenOrientation="portrait" />
         <activity
             android:name="com.imsdk.imdeveloper.ui.activity.MyGroupsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.imsdk.imdeveloper.ui.activity.GroupInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.imsdk.imdeveloper.ui.activity.GroupSearchMemberActivity"
             android:screenOrientation="portrait" />
     </application>
 
