--- a/IMDeveloper/AndroidManifest.xml
+++ b/IMDeveloper/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.imsdk.imdeveloper"
-    android:versionCode="137"
-    android:versionName="1.3.7" >
+    android:versionCode="138"
+    android:versionName="1.3.8" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -61,6 +61,7 @@
     <application
         android:name="com.imsdk.imdeveloper.app.IMApplication"
         android:allowBackup="true"
+        android:largeHeap="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
